2006-04-11  Sven Neumann  <sven@gimp.org>

	* app/units.c
	* app/core/gimp-contexts.c: converted tabs to spaces.

2006-04-11  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.[ch]
	* tools/pdbgen/pdb/fileops.pdb: fix typo: s/thumnail/thumbnail/

	* app/pdb/fileops_cmds.c: regenerated.

2006-04-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcontext.[ch]: removed antique
	gimp_context_get_name() and _set_name().

	* app/actions/vectors-commands.c: #include "gimp-utils.h"

2006-04-10  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-ins.c (plug_ins_add_to_db): don't iterate the
	list of plug-in procedures here, take a GimpPlugInProcedure
	argument instead.

	(plug_ins_init): iterate the list here, just as all other lists
	too. Renamed local "filename" variable to "pluginrc". Moved
	"basename" to local scopes.

	* tools/pdbgen/pdb/procedural_db.pdb: minor cleanup.

	* app/pdb/procedural_db_cmds.c: regenerated.

2006-04-10  Sven Neumann  <sven@gimp.org>

	* libgimpmodule/gimpmoduledb.c (gimp_module_db_module_remove_func):
	don't ignore the return value of g_list_remove().

2006-04-10  Michael Natterer  <mitch@gimp.org>

	* app/file/file-utils.[ch]: added file_utils_load_thumbnail() and
	file_utils_save_thumbnail().

	* tools/pdbgen/pdb/fileops.pdb: remove lots of code and includes
	and use the new functions.

	* app/pdb/fileops_cmds.c: regenerated.

2006-04-10  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-in-file.c: some cleanup.

	(plug_in_file_register_load_handler)
	(plug_in_file_register_save_handler): first check if we have the
	procedure, then check its arguments, not the other way around
	(using an additional lookup). Old weird code was needed because
	these functions were split between app/plug-in and app/pdb.

	* app/plug-in/plug-in-file.h: whitespace.

2006-04-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpzoommodel.c (gimp_zoom_model_zoom_step):
	declared the array of zoom factors as const.
